2009-01-18  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* configure.ac: determine endianness
	* matchbox/theme-engines/mb-wm-theme-png.c: PNG RGB values should
	  be swapped on little-endian machines (e.g. the Intel scratchbox)

2009-01-15  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-client-base.c: remove irrelevant stacking
	  according to stanza 4 of bug #96965.
	* matchbox/core/mb-wm-client.[ch]: add
	  mb_wm_client_get_next_focused_client() and
          mb_wm_client_get_last_focused_transient(); remove the corresponding
	  attributes of MBWindowManagerClient according to stanzas 1 and 2
	  of bug #96965.
	* matchbox/core/mb-window-manager.c: rewrite anywhere which used the
          removed attributes of MBWindowManager to use the new methods.
	  mb_wm_unfocus_client() does not show the desktop if a client cannot
	  be focussed, in case we have another client on top which can,
	  according to stanzas 1 and 2 of bug #96965.
	* matchbox/core/mb-wm-stack.c: mb_wm_stack_dump() should always dump.
	* tests/test-transience.c: regularise test to use Hildon window types
	  (but this could still be improved since it checks focus rather
	   than stacking as stuch; correctness of changes above was checked
	   using debug print statements).

         Closes #96965.

2009-01-15  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Patch from Laszlo Pere:
	* matchbox/core/mb-wm-client-base.c (is_window_mapped): New.
	Ensure that the window is really mapped before increasing skip_unmaps
	counter. Fixes: NB#97342

2009-01-14  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	  Modified XShape handling for windows to allow EGLX and GLX TFP 
	  textures to be rendered correctly.

2009-01-13  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-decor.h: declare mb_wm_decor_class_type().

2009-01-13  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-window-manager.c: